fix: corrigir icone Estrela de Davi + ajustar config APK

--- a/mobile-app/android/app/build.gradle
+++ b/mobile-app/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.icarus.app"
+    namespace = "com.granjavitta.icarus"
     compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.icarus.app"
+        applicationId = "com.granjavitta.icarus"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
