--- a/mobile-app/capacitor.config.json
+++ b/mobile-app/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.granjavitta.icarus",
+  "appId": "com.icarus.app",
   "appName": "Icarus",
   "webDir": "www",
   "bundledWebRuntime": false,
