fix: water chart type persistence, improved mobile CSS for S23 screens, app loads from Vercel

--- a/mobile-app/capacitor.config.json
+++ b/mobile-app/capacitor.config.json
@@ -13,6 +13,8 @@
     }
   },
   "server": {
+    "url": "https://icarus-sys.vercel.app",
+    "cleartext": false,
     "androidScheme": "https",
     "allowNavigation": ["*"]
   }
