--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -16,10 +16,10 @@
     "@capacitor/android": "^5.0.0",
     "@capacitor/core": "^5.0.0",
     "@capacitor/ios": "^5.0.0",
-    "@capacitor/push-notifications": "^5.0.0",
     "@capacitor/local-notifications": "^5.0.0",
+    "@capacitor/network": "^5.0.0",
     "@capacitor/preferences": "^5.0.0",
-    "@capacitor/network": "^5.0.0"
+    "@capacitor/push-notifications": "^5.0.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.0"
