--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@capacitor/android": "^5.0.0",
+    "@capacitor/app": "^5.0.8",
+    "@capacitor/browser": "^5.2.1",
     "@capacitor/core": "^5.0.0",
     "@capacitor/ios": "^5.0.0",
     "@capacitor/local-notifications": "^5.0.0",
