--- a/icarus-lav/package.json
+++ b/icarus-lav/package.json
@@ -7,11 +7,16 @@
     "build": "echo 'Build ready'",
     "android": "npx cap sync android && npx cap open android"
   },
-  "keywords": ["lavanderia", "offline", "icarus"],
+  "keywords": [
+    "lavanderia",
+    "offline",
+    "icarus"
+  ],
   "author": "Icarus System",
   "license": "MIT",
   "dependencies": {
     "@capacitor/android": "^5.7.0",
+    "@capacitor/browser": "^5.2.1",
     "@capacitor/core": "^5.7.0",
     "@capacitor/local-notifications": "^5.0.7",
     "@capacitor/preferences": "^5.0.7"
