fix: grafico temperatura SVG limpo, PDF config capacitor, sync mobile

--- a/mobile-app/capacitor.config.json
+++ b/mobile-app/capacitor.config.json
@@ -10,11 +10,16 @@
     "LocalNotifications": {
       "smallIcon": "ic_stat_icon",
       "iconColor": "#d4af37"
+    },
+    "Browser": {
+      "presentationStyle": "fullscreen"
     }
   },
+  "android": {
+    "allowMixedContent": true
+  },
   "server": {
-    "url": "https://icarus-sys.vercel.app",
-    "cleartext": false,
+    "cleartext": true,
     "androidScheme": "https",
     "allowNavigation": ["*"]
   }
