feat: icarus-lav PDF via backend, endpoint lav-report, config capacitor

--- a/icarus-lav/capacitor.config.json
+++ b/icarus-lav/capacitor.config.json
@@ -10,9 +10,17 @@
     },
     "Preferences": {
       "group": "IcarusLavGroup"
+    },
+    "Browser": {
+      "presentationStyle": "fullscreen"
     }
   },
   "android": {
     "allowMixedContent": true
+  },
+  "server": {
+    "cleartext": true,
+    "androidScheme": "https",
+    "allowNavigation": ["*"]
   }
 }
