--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,1 +1,27 @@
+# Vercel
 .vercel
+
+# Dependencies
+node_modules/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Environment
+.env
+.env.*
+
+# Build outputs
+dist/
+build/
